# testing-framework

./: .gitignore  README.md
ai-test-generator/: .gitignore  README.md  pyproject.toml
ai-test-generator/specs/: petstore-sample.yaml
ai-test-generator/src/: cli.py
ai-test-generator/src/generator/: template_renderer.py  test_generator.py
ai-test-generator/src/parser/: openapi_parser.py
ai-test-generator/src/templates/: playwright_template.spec.ts.j2  pytest_template.py.j2  rest_assured.java.j2
ai-test-generator/tests/: test_openapi_parser.py
api-mock-service/: README.md  docker-compose.yml
api-mock-service/__files/: users-list.json
api-mock-service/mappings/: create-user.json  get-user-by-id.json  get-users-list.json  header-based-auth.json  rate-limited-endpoint-blocked.json  rate-limited-endpoint.json  simulate-500-error.json  simulate-slow-response.json
api-mock-service/tests/: mock-verification.sh
api-test-framework/: .gitignore  README.md  pom.xml
contract-testing-pact/: .gitignore  README.md  jest.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
performance-testing-k6/: .gitignore  README.md  docker-compose.yml  package.json
performance-testing-k6/config/: environments.js  thresholds.js
performance-testing-k6/lib/: helpers.js
performance-testing-k6/tests/: e2e-load-test.js  load-test.js  smoke-test.js  soak-test.js  spike-test.js  stress-test.js
playwright-e2e-framework/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: setup-mac.sh  setup-windows.ps1
(+39 files in other folders)
